force-app/main/default/objects/Fondo_Pignorado__c/Fondo_Pignorado__c.object-meta.xml
<CustomObject>
    <description>Tabla de Fondos Pignorados</description>
    <label>Fondo_Pignorado</label>
    <nameField>
        <label>Nombre de Cuenta</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fondos_Pignorados</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>