force-app/main/default/objects/Fondo_Pignorado__c/fields/Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Cuenta__c</fullName>
    <label>Cuenta</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>