force-app/main/default/objects/Fondo_Pignorado__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <label>Estado</label>
    <length>1</length>
    <required>true</required>
    <type>Text</type>
</CustomField>