force-app/main/default/objects/Fondo_Pignorado__c/fields/Estatus__c.field-meta.xml
<CustomField>
    <fullName>Estatus__c</fullName>
    <label>Estatus</label>
    <length>1</length>
    <required>true</required>
    <type>Text</type>
</CustomField>