force-app/main/default/objects/Fondo_Pignorado__c/fields/Fecha_Liberacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Liberacion__c</fullName>
    <label>Fecha Liberacion</label>
    <type>DateTime</type>
</CustomField>