force-app/main/default/objects/Fondo_Pignorado__c/fields/Fecha_Pignoracion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Pignoracion__c</fullName>
    <label>Fecha Pignoracion</label>
    <type>DateTime</type>
</CustomField>