force-app/main/default/objects/Fondo_Pignorado__c/fields/Monto_Prestamo__c.field-meta.xml
<CustomField>
    <fullName>Monto_Prestamo__c</fullName>
    <label>Monto Prestamo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>