force-app/main/default/objects/Fondo_Pignorado__c/fields/Num_Prestamo__c.field-meta.xml
<CustomField>
    <fullName>Num_Prestamo__c</fullName>
    <label>Num Prestamo</label>
    <length>30</length>
    <type>Text</type>
</CustomField>