force-app/main/default/objects/Fondo_Pignorado__c/fields/Numero_Prestamo__c.field-meta.xml
<CustomField>
    <fullName>Numero_Prestamo__c</fullName>
    <label>Numero Prestamo</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>