force-app/main/default/objects/Fondo_Pignorado__c/fields/Referencia__c.field-meta.xml
<CustomField>
    <fullName>Referencia__c</fullName>
    <label>Referencia</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>