force-app/main/default/objects/Fondo_Pignorado__c/fields/Secuencia__c.field-meta.xml
<CustomField>
    <fullName>Secuencia__c</fullName>
    <label>Secuencia</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>