force-app/main/default/objects/Fondo_Pignorado__c/fields/Total_Fondos__c.field-meta.xml
<CustomField>
    <fullName>Total_Fondos__c</fullName>
    <label>Total Fondos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>