force-app/main/default/objects/Fondo_Pignorado__c/fields/Usuario__c.field-meta.xml
<CustomField>
    <fullName>Usuario__c</fullName>
    <label>Usuario</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>